# black-shard

./: README.md  languages_of_weilan.csv
_authoring/: SCRATCHPAD_eutaxia.md  SCRATCHPAD_sideria.md  SCRATCHPAD_vestrn.md  WIKI_SCHEMA.md
calendar/: .gitignore  README.md  pyproject.toml
calendar/data/: world.json
calendar/data/canon/: yavanna.json
calendar/data/reference/: gregorian.json
calendar/examples/: build_calendars.py
calendar/fcal/: __init__.py  cli.py  engine.py  paths.py  render.py  world.py
calendar/rendered/: yavanna_812.html
calendar/tests/: conftest.py  test_convert.py  test_engine.py  test_world.py
docs/cosmology/: eutaxian-calendar.md
docs/geography/: vestrn.md  weilan.md
docs/history/: severance.md
docs/languages/: languages_of_weilan.csv
docs/nations/vestrn/: baronies.md  hojaplata.md  kaladan.md  nuruu.md  rikrvollr.md  sarvaald.md
docs/nations/yavanna/: the-empire.md
docs/peoples/: dwarves.md  elves.md
docs/religions/: eutaxia.md  sideria.md  vestrn-faith.md
docs/stories/: .gitkeep
docs/technology/: the-wall.md
docs/timelines/: .gitkeep
recipes/: religion-recipe.md
religion/: eutaxia.md
